# interval-tree

./: CMakeLists.txt  CMakePresets.json
include/algo/: binary_search_tree.h  binary_search_tree.hpp  interval_tree.hpp
include/algo/internal/: binary_search_tree_container.hpp
source/: main.cpp
source/algo/: binary_search_tree.cpp
test/include/test/: interval_tree.hpp
